CR-2007-08-29-0: Enhancem.: o added possibility to show additional cluster
                              configurations in menu item 26)
                 Review:    RD

CR-2007-08-28-1: Bugfix:    o fixed problem with deleting hedeby spool dir
                              introduced with CR-2007-08-28-0
                 Cleanup:   o removed not used global ts_config line
                 Review:    JG

CR-2007-08-28-0: Enhancem.: o new menu item: run shutdown hooks
                            o new hedeby config version: 1.2
                              (new parameter: preferences_mode)
                            o new testsuite hedeby system name without
                              underscore characters (see IZ# 72)
                            o fixed problem when try to delete hedeby
                              spool dir without root access
                            o added prototype for TS CTRL+C signal handler
                 Bugfix:    o Implement ts system install mode
                              (needs hedeby commit CR-2007-08-28-0)
                 Issue:     79
                 Review:    RH

CR-2007-08-27-1: Bugfix:    fixed NFS timeout problem when installing
                            hedeby distribution
                 Review:    RH

CR-2007-08-27-0: Cleanup:   o removed not necessary check for additional
                              configurations:
                              independent cluster now might have the same
                              source directory like the main testsuite
                              cluster.
                 Review:    RH

RH-2007-08-24-0: Bugfix:    o open_remote_spawn_process does not handle 
                              "Connection reseted by peer message"
                 Issue:     144
                 Review:    CR

CR-2007-08-22-2: Bugfix:    o hedeby shutdown hook should not report
                              errors which might effect init_core_system
                              test